add db connection using docker

--- a/recycling-platform-backend/src/main/resources/application.properties
+++ b/recycling-platform-backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Recycling Platform
 
-spring.datasource.url=jdbc:mysql://localhost:3306/recycling_platform?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=dada
+spring.datasource.url=jdbc:mysql://localhost:3306/recycling_platform
+spring.datasource.username=recycling
+spring.datasource.password=recycling
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
