--- a/recycling-platform-backend/src/main/resources/application.properties
+++ b/recycling-platform-backend/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=dada
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.active=dev
 
 app.jwt.secret=CHANGE_ME_TO_A_LONG_RANDOM_SECRET_32+_CHARS
 app.jwt.expirationMinutes=120
